fix: prevent math curve logo clipping in header

--- a/src/styles/3-modules/_header.scss
+++ b/src/styles/3-modules/_header.scss
@@ -22,6 +22,8 @@
 
 /* Logo */
 .logo__link {
+  display: inline-flex;
+  align-items: center;
   padding: 4px 0;
   font-family: $heading-font-family;
   font-size: 28px;
